Optimizing Get products
